--- a/LandWeb/LandWeb.csproj
+++ b/LandWeb/LandWeb.csproj
@@ -265,6 +265,8 @@
     <Content Include="Views\Member\Detail.cshtml" />
     <Content Include="Views\CellReport\Index.cshtml" />
     <Content Include="Views\CellReport\Detail.cshtml" />
+    <Content Include="Views\CellReport\Dev.cshtml" />
+    <Content Include="Views\CellReport\Dev2.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
