--- a/LandWeb/LandWeb.csproj
+++ b/LandWeb/LandWeb.csproj
@@ -267,6 +267,8 @@
     <Content Include="Views\CellReport\Detail.cshtml" />
     <Content Include="Views\CellReport\Dev.cshtml" />
     <Content Include="Views\CellReport\Dev2.cshtml" />
+    <Content Include="Views\Account\TestError.cshtml" />
+    <Content Include="Views\Home\Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
