--- a/LandWeb/LandWeb.csproj
+++ b/LandWeb/LandWeb.csproj
@@ -201,7 +201,9 @@
     <Content Include="Content\images\logo.png" />
     <Content Include="Content\images\noimage.jpg" />
     <Content Include="Content\images\pdf.png" />
-    <Content Include="favicon.ico" />
+    <Content Include="favicon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
