Bugfix - Show student count; Make uncheck on web disappear in Landwin

--- a/BAChodae/BAChodae.csproj
+++ b/BAChodae/BAChodae.csproj
@@ -207,6 +207,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
