Refresh Data Model to get ServicePlaceID

--- a/LandWeb.Model/App.config
+++ b/LandWeb.Model/App.config
@@ -11,7 +11,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Chodae_QA8Entities" connectionString="metadata=res://*/LandWeb.csdl|res://*/LandWeb.ssdl|res://*/LandWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.245;initial catalog=Chodae_QA8;user id=sa;password=gmnj0727;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ChodaeEntities" connectionString="metadata=res://*/ChodaeModel.csdl|res://*/ChodaeModel.ssdl|res://*/ChodaeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.245;initial catalog=Chodae;user id=sa;password=gmnj0727;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Chodae_QA8Entities" connectionString="metadata=res://*/LandWeb.csdl|res://*/LandWeb.ssdl|res://*/LandWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.245;initial catalog=Chodae012619;user id=sa;password=gmnj0727;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ChodaeEntities" connectionString="metadata=res://*/ChodaeModel.csdl|res://*/ChodaeModel.ssdl|res://*/ChodaeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.245;initial catalog=Chodae012619;user id=sa;password=gmnj0727;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
